<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView6"
        android:layout_width="283dp"
        android:layout_height="31dp"
        android:layout_marginStart="305dp"
        android:layout_marginEnd="304dp"
        android:text="@string/enter_name"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="281dp"
        android:layout_height="64dp"
        android:layout_marginStart="304dp"
        android:layout_marginEnd="304dp"
        android:layout_marginBottom="25dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.166"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        tools:text="Name" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="275dp"
        android:layout_height="57dp"
        android:layout_marginStart="305dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="311dp"
        android:layout_marginBottom="140dp"
        android:text="@string/choose_difficulty"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText" />

    <RadioGroup
        android:layout_width="418dp"
        android:layout_height="71dp"
        android:layout_marginStart="236dp"
        android:layout_marginEnd="236dp"
        android:layout_marginBottom="86dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_constraintVertical_bias="1.0">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="129dp"
            android:layout_height="55dp"
            android:text="@string/easy_difficulty" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="156dp"
            android:layout_height="54dp"
            android:text="@string/medium_difficulty" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="131dp"
            android:layout_height="54dp"
            android:text="@string/hard_difficulty" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>